# aibot-rust-sdk

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: api.rs  client.rs  crypto.rs  error.rs  lib.rs  logger.rs  message_handler.rs  utils.rs  ws.rs
src/types/: api.rs  common.rs  config.rs  event.rs  message.rs  mod.rs
