[package]
name = "aibot-rust-sdk"
version = "0.1.0"
edition = "2024"
description = "WeCom AiBot Rust SDK (WebSocket long-connection)"
license = "MIT"

[lib]
name = "aibot_rust_sdk"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
base64 = "0.22"
rand = "0.8"
md5 = "0.7"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hex = "0.4"
url = "2"

[dev-dependencies]
anyhow = "1"
